update swaggers 2
